Sat Jun 17 16:17:10 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* data/xchat-gnome.glade:
	  - Make the close button more svelte.

Sat Jun 17 16:13:53 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Fix a booboo in window resizing.

Sat Jun 17 16:11:38 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/topic-label.c:
	  - Only show the expander triangle if the topic is long enough that
	    it can wrap. (#326460)

Fri Jun 16 22:45:51 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/dcc-window.c:
	  - Add a dialog box for accepting DCC chats. (#337074)

Fri Jun 16 21:02:39 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/conversation-panel.h:
	* src/fe-gnome/main-window.c:
	  - Update transparency on window move. (#344609)

Fri Jun 16 20:53:26 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Update transparency when the desktop background changes. (#344609)

Fri Jun 16 20:32:50 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/servlist.c:
	* src/common/util.c:
	* src/common/proto-irc.c:
	* src/common/cfgfiles.c:
	* src/common/text.c:
	* src/common/text.h:
	* src/common/dcc.c:
	* src/common/network.c:
	* src/common/dcc.h:
	* src/common/network.h:
	* src/common/plugin.c:
	* src/common/server.c:
	* src/common/xchat.c:
	* src/common/notify.c:
	* src/common/CVS/Entries:
	* src/common/server.h:
	* src/common/xchat.h:
	* src/common/notify.h:
	* src/common/ignore.c:
	* src/common/ctcp.c:
	  - Update from xchat CVS.

Fri Jun 16 18:57:53 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Don't show the context menu if we don't have a valid row
	    reference. (#340191)

Fri Jun 16 18:47:28 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* help/C/xchat-gnome.xml: